2003-01-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Renamed Node::*Impl
          private virtual functions to do_*.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Fixed exception
          specifications for do_initialize methods.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h:  Scene::initialize throws
          std::bad_alloc.

2003-01-07  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, m4/Makefile.am, m4/ax_check_gl.m4, m4/gl.m4,
          m4/glut.m4:  Replaced OV_CHECK_GL with AX_CHECK_GL.

        * configure.ac, m4/Makefile.am, m4/ax_check_glut.m4, m4/glut.m4:
          Replaced OV_CHECK_GLUT with AX_CHECK_GLUT.

2003-01-05  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4, m4/glut.m4:  Added ac-archive-style doc-comments.

2003-01-03  Braden McDaniel  <braden@endoframe.com>

        * m4/glut.m4:  Include -lXi in GLUT_LIBS.

2003-01-02  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Fix for --without-x.  Apparently when configuring
          --without-x, $x_includes and $x_libraries are set to "NONE".

2002-12-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Added doc-comments.

        * src/openvrml/OpenVRML/browser.cpp:  Use newer form of
          UnsupportedInterface constructor.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Changed
          AbstractLight::renderScoped to take a Viewer & instead of a
          Viewer *.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h: