@@ -607,20 +607,6 @@ InvalidVrml::~InvalidVrml() throw ()
  * ancestors.
  */
 
-namespace {
-
-    struct InitializeScript_ : std::unary_function<ScriptNode *, void> {
-        InitializeScript_(double time): time(time) {}
-
-        void operator()(ScriptNode * const scriptNode) const {
-            scriptNode->initialize(time);
-        }
-
-    private:
-        double time;
-    };
-}
-
 /**
  * @brief Constructor.
  *
